gloc-macro/tests/ui/fail/events_missing_on_event.stderr
error[E0599]: no method named `on_event` found for mutable reference `&mut R` in the current scope
  --> tests/ui/fail/events_missing_on_event.rs:13:1
   |
13 | #[reactor(state = S, neutrons = Ev)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `&mut R`
   |
   = note: this error originates in the attribute macro `reactor` (in Nightly builds, run with -Z macro-backtrace for more info)
